# wazuh-agent-installer

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  run-ci.sh  setup-agent.ps1  setup-agent.sh  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
install-scripts/: macos.sh  ubuntu.sh
src/: config.js  config.ts  index.html  main.js  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
