[package]
name = "wazuh-agent-installer"
version = "1.0.0"
description = "Wazuh Agent Installer"
authors = ["Adorsys GIS"]
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[lib]
name = "wazuh_setup_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
